feat: small changes to finish
