# Reservation/src/main/java/pl/polsl/reservation/dto/MovieReservationDto.java
@@ -1,0 +1,15 @@
+package pl.polsl.reservation.dto;
+
+import lombok.*;
+
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class MovieReservationDto {
+
+    private String title;
+    private ReservationDto reservation;
+}
