# Reservation/src/main/resources/openapi/reservation.yml
@@ -4,6 +4,18 @@ info:
   title: cinema-reservation
 paths:
   /reservation:
+    get:
+      operationId: getReservationsForSelfUser
+      description: returns reservations for user
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ReservationMovie'
     post:
       operationId: createReservetion
       description: creates reservation
@@ -38,6 +50,34 @@ paths:
               schema:
                 type: array
                 items:
+                  $ref: '#/components/schemas/Reservation'
+    delete:
+      operationId: deletesReservation
+      description: returns reservations for screening
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/Reservation'
+  /reservation/detail/{id}:
+    parameters:
+      - name: id
+        in: path
+        schema:
+          type: integer
+          format: int64
+        required: true
+    get:
+      operationId: getReservationDetail
+      description: returns reservation detail
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
                   $ref: '#/components/schemas/Reservation'
 #  /details/{id}:
 #    parameters:
@@ -84,6 +124,13 @@ components:
           items:
             type:  integer
             format: int64
+    ReservationMovie:
+      type: object
+      properties:
+        reservation:
+          $ref: '#/components/schemas/Reservation'
+        title:
+          type: string
     Reservation:
       type: object
       properties:
